testdata/typechecker/error/UnopTest-err.java
int main() {
            boolean b;
            b = !5; // TE
		return 0;
}

